--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,40 @@
 *{
     padding: 0px;
     margin: 0px;
+    text-decoration: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-body{
-    background-color: antiquewhite;
+:root{
+    --cream: #FAEBD7;
+    --aqua: #8BE3E1;
+    --yellowish: #D3F7AD;
+    --greenish: #95BB76;
+    --khaki: #97935C;
+    --border_radius: 20px;
 }
+
+body{
+    background-color: var(--cream);
+    
+}
+
+nav{
+    background-color: var(--aqua);
+    width: 90%;
+    height: 50px;
+    margin: 30px 0px 10px 50px;
+    border-radius: var(--border_radius);
+}
+
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 20px;
+    margin: 10px;
+}
+
