--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,10 @@ nav ul li{
     margin: 10px;
 }
 
+nav ul li a{
+    color: black;
+}
+
 button{
     background-color: transparent;
     border: none;
